LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/Batch_Task_Count__c.object-meta.xml
<CustomObject>
    <label>Batch Task Count</label>
    <nameField>
        <label>Batch Task Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Task Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>