LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/fields/ConnectAndSell__c.field-meta.xml
<CustomField>
    <fullName>ConnectAndSell__c</fullName>
    <label>ConnectAndSell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>