LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/fields/Outreach__c.field-meta.xml
<CustomField>
    <fullName>Outreach__c</fullName>
    <label>Outreach</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>