LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/fields/Pardot__c.field-meta.xml
<CustomField>
    <fullName>Pardot__c</fullName>
    <label>Pardot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>