LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/fields/Showpad__c.field-meta.xml
<CustomField>
    <fullName>Showpad__c</fullName>
    <label>Showpad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>