LWCLearnwithFLOWOrg/force-app/main/default/objects/Batch_Task_Count__c/fields/YMID__c.field-meta.xml
<CustomField>
    <fullName>YMID__c</fullName>
    <label>YMID</label>
    <length>7</length>
    <type>Text</type>
</CustomField>